--- a/Showcase/Areas/Admin/Views/Workouts/Index.cshtml
+++ b/Showcase/Areas/Admin/Views/Workouts/Index.cshtml
@@ -13,13 +13,16 @@
     <table class="table">
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.WorkoutDate)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.WorkoutTitle)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.WorkoutDescription)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.WorkoutTpe)
+                @Html.DisplayNameFor(model => model.WorkoutType)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.WorkoutLength)
@@ -30,13 +33,16 @@
     @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.WorkoutDate)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.WorkoutTitle)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.WorkoutDescription)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.WorkoutTpe)
+                @Html.DisplayFor(modelItem => item.WorkoutType)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.WorkoutLength)
