--- a/Showcase/Areas/Admin/Views/Shared/_AdminHead.cshtml
+++ b/Showcase/Areas/Admin/Views/Shared/_AdminHead.cshtml
@@ -16,5 +16,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
     
     @Styles.Render("~/bundles/bootstraplightStyles")
+    @Styles.Render("~/bundles/jqueryCss")
     
 </head>
