--- a/Showcase/Areas/Admin/Views/Workouts/Delete.cshtml
+++ b/Showcase/Areas/Admin/Views/Workouts/Delete.cshtml
@@ -29,11 +29,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.WorkoutTpe)
+            @Html.DisplayNameFor(model => model.WorkoutType)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.WorkoutTpe)
+            @Html.DisplayFor(model => model.WorkoutType)
         </dd>
 
         <dt>
