--- a/Showcase/Areas/Admin/Views/Workouts/Edit.cshtml
+++ b/Showcase/Areas/Admin/Views/Workouts/Edit.cshtml
@@ -34,10 +34,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.WorkoutTpe, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.WorkoutType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.WorkoutTpe, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.WorkoutTpe, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.WorkoutType, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.WorkoutType, "", new { @class = "text-danger" })
             </div>
         </div>
 
