--- a/Showcase/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Showcase/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -72,4 +72,11 @@
     }
 </script>
 
+<script type="text/javascript">
+        $("#s-workout-date").datepicker({ dateFormat: 'mm/dd/yy' });
+        $('.clockpicker').clockpicker({
+            donetext: 'Done'
+        });
+</script>
+
 @RenderSection("Scripts", false)
