--- a/Showcase/Areas/Admin/Views/Workouts/Create.cshtml
+++ b/Showcase/Areas/Admin/Views/Workouts/Create.cshtml
@@ -30,9 +30,20 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.WorkoutLength, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.WorkoutLength, new { htmlAttributes = new { @class = "form-control clockpicker" } })
+                <span class="input-group-addon s-timer-box">
+                    <span class="glyphicon glyphicon-time"></span>
+                </span>
+                @Html.ValidationMessageFor(model => model.WorkoutLength, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.WorkoutDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.WorkoutDescription, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.WorkoutDescription, new { @class = "form-control s-description-box" })
                 @Html.ValidationMessageFor(model => model.WorkoutDescription, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -46,19 +57,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.WorkoutLength, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.WorkoutLength, new { htmlAttributes = new { @class = "form-control clockpicker" } })
-                <span class="input-group-addon">
-                    <span class="glyphicon glyphicon-time"></span>
-                </span>
-                @Html.ValidationMessageFor(model => model.WorkoutLength, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default s-submit-btn" />
             </div>
         </div>
     </div>
@@ -67,11 +67,3 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-
-@section scripts {
-    <script type="text/javascript">
-        $("#s-workout-date").datepicker({ dateFormat: 'mm/dd/yy' });
-        $('.clockpicker').clockpicker();
-    </script>
-}
