--- a/Showcase/Views/Home/Index.cshtml
+++ b/Showcase/Views/Home/Index.cshtml
@@ -61,11 +61,12 @@
                         <h1 class="s-author-title">
                             Nathan Johnson
                             <span class="font-weight-light"></span>
-                        </h1>
-                        <div class="s-author-details h6 font-weight-300"><i class="ni location_pin mr-2"></i>Eugene, Oregon U.S.A</div>
-                        <div class="s-author-details h6 mt-4"><i class="ni business_briefcase-24 mr-2"></i>Web Developer, Computer Programmer</div>
-                        <div><i class="s-author-details ni education_hat mr-2"></i>Grove City College 09'</div>
+                        </h1>                      
+                        <div class="s-author-home">
+                            <p class="s-author-description">Web Developer | Computer Programmer | Music is big, running is fun</p>
+                        </div>
                     </div>
+                       
                     <div class="mt-5 py-5 border-top text-center">
                         <div class="row justify-content-center">
                             <div class="col-lg-9">
