--- a/Showcase/Areas/Admin/Views/Posts/Edit.cshtml
+++ b/Showcase/Areas/Admin/Views/Posts/Edit.cshtml
@@ -70,7 +70,7 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-md-offset-2 col-md-10 s-submit-col">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
