--- a/Showcase/Areas/Admin/Views/Workouts/Edit.cshtml
+++ b/Showcase/Areas/Admin/Views/Workouts/Edit.cshtml
@@ -10,25 +10,46 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Workout</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.WorkoutId)
+        <div class="form-group row">
+            <div class="col-md-6">
+                @Html.LabelFor(model => model.WorkoutDate, htmlAttributes: new { @class = "control-label col-md-2" })
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.WorkoutTitle, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+                @Html.EditorFor(model => model.WorkoutDate, new { htmlAttributes = new { @class = "form-control", @id = "s-workout-date" } })
+                @Html.ValidationMessageFor(model => model.WorkoutDate, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-md-6">
+                @Html.LabelFor(model => model.WorkoutTitle, htmlAttributes: new { @class = "control-label col-md-2" })
+
                 @Html.EditorFor(model => model.WorkoutTitle, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.WorkoutTitle, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group row">          
+            <div class="col-md-6">
+                @Html.LabelFor(model => model.WorkoutLength, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.WorkoutLength, new { htmlAttributes = new { @class = "form-control clockpicker" } })
+                <span class="input-group-addon s-timer-box">
+                    <span class="glyphicon glyphicon-time"></span>
+                </span>
+                @Html.ValidationMessageFor(model => model.WorkoutLength, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-md-6">
+                @Html.LabelFor(model => model.WorkoutDistance, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.WorkoutDistance, new { htmlAttributes = new { @class = "form-control", @type="number" } })
+                @Html.ValidationMessageFor(model => model.WorkoutDistance, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.WorkoutDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.WorkoutDescription, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.WorkoutDescription, new { @class = "form-control s-description-box" })
                 @Html.ValidationMessageFor(model => model.WorkoutDescription, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -42,16 +63,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.WorkoutLength, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.WorkoutLength, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.WorkoutLength, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+            <div class="col-md-offset-2 col-md-10 s-submit-col">
+                <input type="submit" value="Save" class="btn btn-default s-submit-btn" />
             </div>
         </div>
     </div>
