--- a/Showcase/Content/Site.css
+++ b/Showcase/Content/Site.css
@@ -10,6 +10,13 @@ html body {
     line-height: 1.75em;
 }
 
+body .s-background-shade {
+    width: 100%;
+    height: 580px;
+    background-color: black;
+    opacity: 0.4;
+}
+
 body a {
     color:#172b4d;
 }
@@ -35,6 +42,10 @@ body .border-top {
 body .s-static-header .s-navbar-blue {
     background-color:#172b4d!important;
     width:100%;
+}
+
+body .s-author-home .s-author-description {
+    margin-top:10px;
 }
 
 body .s-author-details {
