--- a/Showcase/Views/Blog/_BlogCenter.cshtml
+++ b/Showcase/Views/Blog/_BlogCenter.cshtml
@@ -1,6 +1,7 @@
 ﻿
 <main class="profile-page">
     <section class="section-profile-cover section-shaped my-0">
+        <div class="s-background-shade"></div>
         <!-- Circles background -->
         <div class="shape shape-style-1 alpha-4 s-image-background">
             <span></span>
