--- a/Showcase/Views/Home/About.cshtml
+++ b/Showcase/Views/Home/About.cshtml
@@ -35,11 +35,13 @@ Layout = "~/Views/Shared/_HomeLayout.cshtml";
                   </div>
                   <div class="col-lg-4 order-lg-3 text-lg-right align-self-lg-center">
                   </div>
-                  <div class="col-lg-4 order-lg-1">                     
+                  <div class="col-lg-4 order-lg-1">
+                      <div class="s-author-details h6 font-weight-300"><i class="ni location_pin mr-2"></i>Location: Eugene, Oregon U.S.A</div>
+                     
                   </div>
                </div>
                <div class="text-center mt-5">
-                  <h1 class="s-author-title s-about-title">About Me</h1>
+                  <h1 class="s-author-title s-about-title">About Me</h1>                  
                    <p class="s-author-description">Web Developer | Computer Programmer | Music is big, running is fun</p>
                </div>
                <div class="mt-5 py-5 border-top text-center">
