--- a/Showcase/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Showcase/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -42,7 +42,10 @@
 <script type="text/javascript">
         $(document).ready(function () {
             $('#ShowcaseDataTable').DataTable({
-                //Options go here
+                "paging": true,
+                "searching": true,
+                "ordering": true,
+                "pageLength": 10
             });
         });
 
