--- a/Showcase/Areas/Admin/Views/Workouts/Create.cshtml
+++ b/Showcase/Areas/Admin/Views/Workouts/Create.cshtml
@@ -29,14 +29,19 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.WorkoutLength, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+        <div class="form-group row">
+            <div class="col-md-6">
+                @Html.LabelFor(model => model.WorkoutLength, htmlAttributes: new { @class = "control-label col-md-2" })
                 @Html.EditorFor(model => model.WorkoutLength, new { htmlAttributes = new { @class = "form-control clockpicker" } })
                 <span class="input-group-addon s-timer-box">
                     <span class="glyphicon glyphicon-time"></span>
                 </span>
                 @Html.ValidationMessageFor(model => model.WorkoutLength, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-md-6">
+                @Html.LabelFor(model => model.WorkoutDistance, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.EditorFor(model => model.WorkoutDistance, new { htmlAttributes = new { @class = "form-control", @type = "number" } })
+                @Html.ValidationMessageFor(model => model.WorkoutDistance, "", new { @class = "text-danger" })
             </div>
         </div>
 
