--- a/Showcase/Views/Home/Index.cshtml
+++ b/Showcase/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
                             <div class="card-profile-stats d-flex justify-content-center">
                                 <div>
                                     <span class="heading">22</span>
-                                    <span class="description">Friends</span>
+                                    <span class="description">Posts</span>
                                 </div>
                                 <div>
                                     <span class="heading">10</span>
