--- a/Showcase/Areas/Admin/Views/Posts/Edit.cshtml
+++ b/Showcase/Areas/Admin/Views/Posts/Edit.cshtml
@@ -3,15 +3,15 @@
 
 @{
     ViewBag.Title = "Posts";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
 
 <h2>Edit</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Posts", FormMethod.Post, new { enctype = "multipart/form-data", @class = "ds-admin-form" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Post</h4>
         <hr />
@@ -41,7 +41,7 @@
                 @Html.ValidationMessageFor(model => model.PostContent, "", new { @class = "text-danger" })
             </div>
         </div>
-        
+
         <div class="form-group">
             @Html.Label("Post Image", htmlAttributes: new { @class = "control-label" })
             <div class="col-md-10">
@@ -56,16 +56,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ViewCount, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ViewCount, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.InActive, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.InActive)
-                    @Html.ValidationMessageFor(model => model.InActive, "", new { @class = "text-danger" })
-                </div>
             </div>
         </div>
 
