--- a/Showcase/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Showcase/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -40,14 +40,17 @@
 <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/responsive/2.1.0/js/responsive.bootstrap.min.js"></script>
 
 <script type="text/javascript">
-        $(document).ready(function () {
+    $(document).ready(function () {
+        if ($('#ShowcaseDataTable').length > 0) {
             $('#ShowcaseDataTable').DataTable({
                 "pagingType": "full_numbers",
                 "pageLength": 5,
                 "searching": true,
                 "ordering": true       
             });
+            }
         });
+    
 
 </script>
 
